--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@eslint/css": "^0.7.0",
     "@eslint/js": "^9.25.1",
     "@eslint/json": "^0.12.0",
+    "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "eslint": "^9.25.1",
     "globals": "^16.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.0"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
   }
 }
