add command for start application

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "tsx watch src/index.ts",
     "lint": "npx eslint ./src/**",
     "lint:fix": "npx eslint ./src/** --fix"
   },
