--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "typescript-eslint": "^8.31.0"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "reflect-metadata": "^0.2.2",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.22"
   }
 }
