--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsx watch src/index.ts",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "build": "tsc",
     "lint": "npx eslint ./src/**",
     "lint:fix": "npx eslint ./src/** --fix"
   },
@@ -20,6 +22,7 @@
     "@types/node": "^22.15.3",
     "eslint": "^9.25.1",
     "globals": "^16.0.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.31.0"
