--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@eslint/css": "^0.7.0",
     "@eslint/js": "^9.25.1",
     "@eslint/json": "^0.12.0",
+    "@types/body-parser": "^1.19.5",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.3",
     "eslint": "^9.25.1",
@@ -28,6 +29,7 @@
     "typescript-eslint": "^8.31.0"
   },
   "dependencies": {
+    "body-parser": "^2.2.0",
     "express": "^5.1.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
