--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "tsc",
     "lint": "npx eslint ./src/**",
     "lint:fix": "npx eslint ./src/** --fix"
@@ -23,6 +23,7 @@
     "@types/node": "^22.15.3",
     "eslint": "^9.25.1",
     "globals": "^16.0.0",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3",
